# akademy-company

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
trytond/modules/akademy_company/: README.md  company.py  company.xml  report.xml  tryton.cfg
trytond/modules/akademy_company/locale/: de.po  en.po  fr.po  pt.po
trytond/modules/akademy_company/reports/: company.fodt  employee.fodt  student.fodt
trytond/modules/akademy_company/security/: access_rights_admin.xml  access_rights_direct.xml  access_rights_secret.xml  access_rights_student.xml  access_rights_teacher.xml
